@@ -68,6 +68,7 @@ following names for their contribution to the product.
 == Patch Contributors ==
 * Agbad
 * Ahmad Sherif
+* Alejandro Mery
 * Amalthea
 * Antonio Ospite
 * Azliq7
